<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="gen_music"
        android:title="@string/pref_title_music"
        android:summary="@string/pref_description_music" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="gen_sounds"
        android:summary="@string/pref_description_music2"
        android:title="@string/pref_title_music2" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="gen_animation"
        android:summary="@string/pref_description_anim"
        android:title="@string/pref_title_anim" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="gen_animation"
        android:key="gen_sink"
        android:title="@string/pref_title_ani1" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="gen_animation"
        android:key="gen_empty"
        android:title="@string/pref_title_ani2" />

</PreferenceScreen>
